# aletheia-core

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pinact.yaml  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  Dockerfile  GROWTH_METRICS.md  MAINTAINERS.md  MAINTENANCE.md  MANIFEST.in  Makefile  PHASE_2_COMPLETION_REPORT.md  QUICKSTART.md  README.md  RED_TEAM_ANALYSIS.md  SECURITY.md  app.py  dashboard.py  demo.sh  docker-compose.yml  eslint.config.mjs  horos.json  main.py  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  pyproject.toml  render.yaml  requirements-ci.txt  (+7 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING_EXTENDED.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  release_checklist.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  pin-check.yml  publish.yml  release-drafter.yml  release-version-sync.yml  scorecard.yml  security.yml  stale.yml  verify-routes.yml
agents/: __init__.py  client_portal.py  judge.py  judge_v1.py  nitpicker.py  nitpicker_v1.py  nitpicker_v2.py  revenue_monitor.py  scout_v1.py  scout_v2.py  sovereignty_proof.py  vault_encryption.py
aletheia_core/: __init__.py
api/: main.py
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/agent-policy-enforcement/: page.tsx
app/ai-agent-guardrails/: page.tsx
app/ai-agent-security/: page.tsx
app/ai-runtime-audit/: page.tsx
app/ai-runtime-security/: page.tsx
app/blog/: _posts.ts  (+1 more)
bridge/: __init__.py  config.py  fastapi_wrapper.py  utils.py
canonical/: __init__.py
core/: __init__.py  agent_trifecta.py  audit.py  canonicalization.py  config.py  db.py  decision_store.py  embeddings.py  exporters.py  key_store.py  logging.py  manifest_cache.py  metrics.py  model_loader.py  rate_limit.py  receipt_keys.py  redis_pool.py  runtime_bootstrap.py  runtime_security.py  runtime_status.py  sandbox.py  secret_rotation.py  semantic_manifest.py  symbolic_narrowing.py  text_normalization.py  unified_audit.py  vector_store.py  ws_audit.py
crypto/: __init__.py  calibration_manifest.py  chain_signer.py  tpm_interface.py
data/: semantic_manifest.json
deploy/: logrotate.conf  nginx.conf
detectors/: __init__.py  escalation_probe.py  identity_anchor.py  safety_bounds.py  sovereign_relay.py  spectral_monitor.py  spectral_rigidity.py  swarm_detector.py
docs/: API.md  API_REFERENCE.md  AUDIT_FINDINGS_CRYPTO_BINDING_2026-04-30.md  CNAME  ENTERPRISE_LAUNCH_AUDIT_2026-04-17.md  ENVIRONMENT_VARIABLES.md  INCIDENT_RESPONSE.md  INSTALL.md  KEY_ROTATION.md  LAUNCH_GUIDE.md  LUNAR_VDP_REPORT.md  MAINTAINERS.md  MAINTAINER_CHORES.md  MONITORING_ALERTING.md  OPERATIONS_RUNBOOK.md  QUICKSTART.md  SDK_INTEGRATION.md  SITE_DIAGRAM.md  SMOKE_TESTS.md  SOVEREIGNTY.md  SUPPORT.md  THREAT_MODEL.md  agent-trifecta.md  index.html
economics/: circuit_breaker.py  distributed_state.py  duplicate_detector.py  token_velocity.py  zero_standing_privileges.py
env/: live.env.example
guards/: __init__.py  circuit_breaker.py  token_velocity.py  zero_standing_privileges.py
legal/: PITCH_DECK.md  SOVEREIGNTY.md  WHITEPAPER.md
lib/: api-keys.ts  api-utils.ts  auth-config.ts  auth.ts  client-fetch.ts  email.ts  hosted-plans.ts  onboarding.ts  public-keys.ts  rate-limit.ts  server-auth.ts  site-config.ts  usage-tracking.ts
manifest/: __init__.py  security_policy.ed25519.pub  security_policy.json  security_policy.json.sig  signing.py
monitoring/: __init__.py  escalation_probe.py  spectral_rigidity.py  swarm_detector.py
prisma/: schema.prisma
proximity/: __init__.py  identity_anchor.py  proximity_score.py  safety_bounds.py  sovereign_relay.py  spectral_monitor.py
public/: robots.txt  theme-bootstrap.js
receipts/: index_receipt.json
scripts/: api_audit_gate.py  backup_sqlite.sh  build_semantic_index.py  calibrate_bk_threshold.py  calibrate_with_integrity.py  check_internal_links.py  check_version_sync.py  demo.sh  demo_layer_comparison.py  generate_receipt_keypair.py  index_qdrant_manifest.py  load_live_env.sh  migrate_v1_to_v2.py  render_warmup.py  run_trial_quota_1000.sh  seed_demo_key.py  smoke_test_live.py  watch-tests.sh
server/: __init__.py  _app_state.py  _bridge.py  _deps.py  _helpers.py  _state.py  app.py  middleware.py  models.py  utils.py  websocket.py
simulations/: adversarial_loop.py  lunar_shadow_audit.py  neutral_anchor_audit.py  shadow_audit_01.py
tests/: conftest.py  test_agent_trifecta.py  test_api.py  test_audit_extended.py  test_audit_hardening.py  test_auth_hardening.py  test_auth_rbac.py  test_bridge_config.py  test_bridge_utils_extended.py  test_calibration_manifest.py  test_canonicalization_extended.py  test_cli.py  test_config.py  test_config_ownership.py  test_core.py  test_crypto_anchor.py  test_decision_store.py  test_demo_key_seed.py  test_distributed_security_integration.py  test_distributed_state.py  test_duplicate_detector.py  test_economic_anchor.py  test_economics.py  test_embeddings.py  test_enterprise.py  test_enterprise_hardening_phase3.py  test_hardening.py  test_input_validation_limits.py  test_judge.py  test_judge_manifest.py  test_key_store.py  test_legacy_agents.py  test_manifest_cache.py  test_manifest_expiry.py  test_metrics.py  test_middleware_security.py  test_nitpicker.py  test_observability.py  test_oidc_auth.py  test_persistence.py  (+30 more)
tests-ts/: api-logs.test.ts  auth-aware-cta.test.ts  auth-rate-limit.test.ts  auth-redirect.test.ts  blog.test.ts  cron-auth.test.ts  dashboard-counters.test.ts  demo-route-failclosed.test.ts  middleware-auth-mask.test.ts  middleware-headers.test.ts  onboarding.test.ts  policy-tracing-config.test.ts  stripe-enterprise.test.ts  stripe-signature.test.ts  tenant-isolation.test.ts  usage-normalization.test.ts  wellknown.test.ts
types/: next-auth.d.ts
(+167 files in other folders)
