[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia-cyber-core"
version = "1.4.4"
description = "Enterprise-grade System 2 security layer for autonomous AI agents. Protects against instruction smuggling, semantic camouflage, and supply-chain attacks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ashura Joseph Holeyfield", email = "holeyfield33art@users.noreply.github.com"},
]
keywords = [
    "ai-safety",
    "llm-security",
    "prompt-injection",
    "ai-agents",
    "guardrails",
    "cryptography",
    "ed25519",
    "audit-trail",
    "runtime-security",
    "nist-ai-rmf",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=43.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://aletheia-core.com"
Documentation = "https://aletheia-core.com"
Repository = "https://github.com/holeyfield33-art/aletheia-core"
Issues = "https://github.com/holeyfield33-art/aletheia-core/issues"
Changelog = "https://github.com/holeyfield33-art/aletheia-core/releases"

[project.scripts]
aletheia-audit = "main:run_aletheia_audit"

[tool.setuptools.packages.find]
include = ["agents*", "bridge*", "simulations*", "manifest*", "core*", "proximity*"]

[project.optional-dependencies]
proximity = [
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.package-data]
manifest = ["*.json", "*.sig", "*.pub"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
