[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia-cyber-core"
version = "1.9.2"
description = "Runtime audit and pre-execution block layer for autonomous AI agents. Protects against instruction smuggling, semantic camouflage, and supply-chain attacks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ashura Joseph Holeyfield", email = "holeyfield33art@users.noreply.github.com"},
]
keywords = [
    "ai-safety",
    "llm-security",
    "prompt-injection",
    "ai-agents",
    "guardrails",
    "cryptography",
    "ed25519",
    "audit-trail",
    "runtime-security",
    "nist-ai-rmf",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "cryptography>=46.0.7",
    "sentence-transformers>=3.0.0",
    "confusable-homoglyphs>=3.0.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.0",
    "asyncpg>=0.30.0",
]

[project.urls]
Homepage = "https://aletheia-core.com"
Documentation = "https://aletheia-core.com"
Repository = "https://github.com/holeyfield33-art/aletheia-core"
Issues = "https://github.com/holeyfield33-art/aletheia-core/issues"
Changelog = "https://github.com/holeyfield33-art/aletheia-core/releases"

[project.scripts]
aletheia-audit = "main:run_aletheia_audit"

[tool.setuptools.packages.find]
include = ["agents*", "bridge*", "simulations*", "manifest*", "core*", "proximity*", "crypto*", "monitoring*", "economics*"]

[project.optional-dependencies]
proximity = [
    "httpx>=0.24.0",
]
tpm = [
    "tpm2-pytss>=2.0.0",
]
distributed = [
    "redis>=5.0.0",
]
semantic = [
    "qdrant-client>=1.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.package-data]
manifest = ["*.json", "*.sig", "*.pub"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Strict flags applied selectively – see per-module overrides below.
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true

# Third-party libraries without stubs or that use dynamic metaclasses
[[tool.mypy.overrides]]
module = [
    "core.semantic_manifest",
    "core.runtime_security",
    "bridge.fastapi_wrapper",
]
# Pydantic v2 validators use untyped decorators; FastAPI routes are decorated
# by the router object which mypy sees as Any.
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "core.secrets.aws",
    "core.secrets.azure",
    "core.secrets.gcp",
    "core.secrets.vault",
    "core.auth.oidc",
    "core.auth.saml",
    "crypto.tpm_interface",
    "core.vector_store",
]
# Optional-dependency modules do runtime imports; Any propagation is expected.
warn_return_any = false
warn_unused_ignores = false
